Retome palabra principal 👍

--- a/core/templates/producto_confirm_delete.html
+++ b/core/templates/producto_confirm_delete.html
@@ -7,7 +7,7 @@
     <form method="post">
         {% csrf_token %}
         <button type="submit" class="btn btn-danger">Sí, eliminar</button>
-        <a href="{% url 'producto_list' %}" class="btn btn-secondary">No</a>
+        <a href="{% url 'producto_list' %}" class="btn btn-secondary">Cancelar</a>
     </form>
 </div>
 {% endblock %}
